# Auto_Dealership_API

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: django.yml
car_dealership_api/: manage.py  requirements.txt
car_dealership_api/api/: admin.py  filters.py  models.py  seed.py  serializers.py  urls.py  views.py
car_dealership_api/api/migrations/: 0001_initial.py
car_dealership_api/car_dealership_api/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: update_requirements.sh
